Status/2025Q4: Vale fixes

--- a/website/content/en/status/report-2025-10-2025-12/frdp.adoc
+++ b/website/content/en/status/report-2025-10-2025-12/frdp.adoc
@@ -21,7 +21,8 @@ All 47 documents (books and articles) are now fully synchronized on the link:htt
 * News, event announcements, and press links are now being translated and published on the Russian website.
 Additionally, Errata Notices and Security Advisories have been translated into Russian starting from January 2025.
 * For the FreeBSD 15.0 release, the complete set of release documentation (release notes, errata, etc.) has been translated into Russian in a timely manner alongside the English originals.
-* The project to translate FreeBSD man pages has been initiated and is in its very early stages. Preliminary examples can be found at link:https://github.com/freebsd-doc-ru/freebsd-man-ru[GitHub].
+* The project to translate FreeBSD man pages has been initiated and is in its very early stages.
+  Preliminary examples can be found at link:https://github.com/freebsd-doc-ru/freebsd-man-ru[GitHub].
 
 This report acknowledges with appreciation the contributions of the following colleagues who performed reviews of our commits during the quarter (in Phabricator or by email):
 
