--- a/website/content/en/status/report-2025-10-2025-12/kde.adoc
+++ b/website/content/en/status/report-2025-10-2025-12/kde.adoc
@@ -23,7 +23,8 @@ This might be the last update for Qt5 on FreeBSD.
 
 ==== KDE Stack
 
-KDE Frameworks, Plasma, and Gear release happen very regularly. mailto:kde@FreeBSD.org[KDE team] lands these updates shortly after their upstream release.
+KDE Frameworks, Plasma, and Gear release happen very regularly.
+mailto:kde@FreeBSD.org[KDE team] lands these updates shortly after their upstream release.
 
 * KDE Frameworks ports were updated to 6.21.0.
 * KDE Plasma Desktop was updated to 6.5.4.
@@ -39,7 +40,7 @@ It can be used as a daily driver instead of Plasma/X11.
 ==== Related Ports
 
 The mailto:kde@FreeBSD.org[KDE team] maintains nearly 730 ports and updates them all as needed.
-According to link:https://portscout.freebsd.org/kde@freebsd.org.html[Portscout] only 1% ports are outdated.
+According to link:https://portscout.freebsd.org/kde@freebsd.org.html[portscout] only 1% ports are outdated.
 
 The KDE team would like to thank mailto:arrowd@FreeBSD.org[Gleb Popov], mailto:jhale@FreebSD.org[Jason E. Hale], mailto:lbartoletti@FreeBSD.org[Loïc Bartoletti], and mailto:makc@FreeBSD.org[Max Brazhnikov] for keeping things up-to-date.
 The KDE team is grateful to Harley (SponiX on IRC) for sharing his building box.
