--- a/website/content/en/status/report-2025-10-2025-12/sbom.adoc
+++ b/website/content/en/status/report-2025-10-2025-12/sbom.adoc
@@ -14,14 +14,16 @@ Contact: Tuukka Pasanen <tuukka.pasanen@ilmi.fi>
 
 The Software Bill of Materials (SBOM) project has been ongoing since May, with the goal of providing the necessary tooling to create SBOMs from FreeBSD Ports and the base system.
 
-One of the major developments in 2025Q4 was upstreaming spdxtool to the pkgconf upstream. The upstreamed code ensures that pkgconf tools have an SPDX Lite 3.0.1 profile-compatible SBOM creation tool with the next release.
+One of the major developments in 2025Q4 was upstreaming spdxtool to the pkgconf upstream.
+The upstreamed code ensures that pkgconf tools have an SPDX Lite 3.0.1 profile-compatible SBOM creation tool with the next release.
 
 Another significant effort has been gathering information about applications that form part of the FreeBSD base system.
 These applications are primarily located in the [.filename]#usr.bin#, [.filename]#usr.sbin#, [.filename]#sbin#, and [.filename]#bin# directories inside FreeBSD git repository.
 The FreeBSD Alpha Omega Beach Cleaning project has been instrumental as it gathers information about third-party libraries and applications, and I have contributed to this effort.
 Now there is Lua scripts and a file that can produce the needed files for pkgconf's spdxtool, which can be exported in SPDX JSON-LD format.
 
-Tools using this gathered information and current raw data can be found in my fork of the FreeBSD src tree. Mainly, all C and header files that hold SPDX-License-Identifier are now gathered and processed.
+Tools using this gathered information and current raw data can be found in my fork of the FreeBSD src tree.
+Mainly, all C and header files that hold SPDX-License-Identifier are now gathered and processed.
 
 There have also been efforts to upstream SBOM creation per package for FreeBSD Ports, but this has stalled and needs updating.
 
