Status/2025Q4: More fixes

--- a/website/content/en/status/report-2025-10-2025-12/jdk21default.adoc
+++ b/website/content/en/status/report-2025-10-2025-12/jdk21default.adoc
@@ -1,4 +1,4 @@
-=== Ports -- Make OpenJDK 21 the default JAVA_VERSION
+=== Make OpenJDK 21 the default JAVA_VERSION
 
 Links:
 link:https://bugs.freebsd.org/bugzilla/show_bug.cgi?id=272855[Issue 272855] URL: link:https://bugs.freebsd.org/bugzilla/show_bug.cgi?id=272855[] +
