--- a/website/content/en/status/report-2025-10-2025-12/mongodb80.adoc
+++ b/website/content/en/status/report-2025-10-2025-12/mongodb80.adoc
@@ -1,4 +1,4 @@
-=== Ports -- Use Bazel as build tool for MongoDB 8.0
+=== Use Bazel as build tool for MongoDB 8.0
 
 Links: +
 link:https://www.freshports.org/databases/mongodb80/[MongoDB 8.0 port] URL: https://www.freshports.org/databases/mongodb80/[] +
