--- a/website/content/en/status/report-2025-10-2025-12/parthenope-design-ideas.adoc
+++ b/website/content/en/status/report-2025-10-2025-12/parthenope-design-ideas.adoc
@@ -1,4 +1,4 @@
-=== Parthenope - Design and ideas
+=== Parthenope -- Design and ideas
 
 Link: +
 link:https://gitlab.com/alfix/parthenope[Parthenope Repository] URL: link:https://gitlab.com/alfix/parthenope[]
@@ -18,16 +18,17 @@ Parthenope began as a personal project to answer a simple question: "What featur
 It has since evolved into an open source tool that anyone can use, adapt, or extend to meet their own requirements.
 
 During this quarter:
+
 * The motivations, a proof of concept, and some screenshot previews were presented at EuroBSDCon 2025, link:https://events.eurobsdcon.org/media/2025/submissions/FV7RJ7/resources/2-step-installer-zagreb-20_rpFDkax.pdf[slides].
 * The ISO image generation script and the internationalization subsystem were refactored.
 * A public repository was created.
 
 At the moment it is not yet possible to install FreeBSD.
 The next steps are:
+
 * Refactor the configuration file.
 * Refactor the subsystems: logging, modes, phase-2, etc.
 * Implement the installer components: partitioner, network manager, date/time, etc.
 
 In the initial phase, the only frontend will be a Text User Interface, very similar to bsdinstall, the default FreeBSD installer.
 Additional frontends will be added in the future.
-
