Status/2025Q4: Fix a typo
No idns in ports, It should be dns

--- a/website/content/en/status/report-2025-10-2025-12/sylve.adoc
+++ b/website/content/en/status/report-2025-10-2025-12/sylve.adoc
@@ -24,7 +24,7 @@ Optional runtime dependencies, required only when their respective features are 
 - package:devel/qemu[devel/qemu-tools] for disk image management
 - package:net/samba419[] for SMB file sharing
 - package:sysutils/swtpm[] for TPM emulation support
-- package:idns/dnsmasq[] for DHCP and DNS services
+- package:dns/dnsmasq[] for DHCP and DNS services
 
 ==== Q4 Progress Highlights
 
