hanbook/network: Use consistent wireless interface
This chapter alternated between `iwn0` and `iwm0` for the interface.

Reviewed by:	carlavilla, ziaee
Closes:		https://github.com/freebsd/freebsd-doc/pull/613

--- a/documentation/content/en/books/handbook/network/_index.adoc
+++ b/documentation/content/en/books/handbook/network/_index.adoc
@@ -107,7 +107,7 @@ em0@pci0:0:25:0:        class=0x020000 rev=0x03 hdr=0x00 vendor=0x8086 device=0x
     class      = network
     subclass   = ethernet
 --
-iwn0@pci0:3:0:0:        class=0x028000 rev=0x00 hdr=0x00 vendor=0x8086 device=0x4237 subvendor=0x8086 subdevice=0x1211
+iwm0@pci0:3:0:0:        class=0x028000 rev=0x00 hdr=0x00 vendor=0x8086 device=0x4237 subvendor=0x8086 subdevice=0x1211
     vendor     = 'Intel Corporation' <1>
     device     = 'PRO/Wireless 5100 AGN [Shiloh] Network Connection' <2>
     class      = network
@@ -607,7 +607,7 @@ Replace it with the password of the wireless network.
 
 The third step is to add the network interface entry to configure the network on startup.
 Obtain the network device interface by using the sysctl `net.wlan.devices`.
-In the listing below, the output of this sysctl shows the network device interface is "iwn0".
+In the listing below, the output of this sysctl shows the network device interface is "iwm0".
 
 [source,shell]
 ....
@@ -621,11 +621,11 @@ The output should be similar to the following:
 net.wlan.devices: iwm0
 ....
 
-In the sysrc line that follows, replace "iwn0" with the output of the sysctl command if needed.
+In the sysrc line that follows, replace "iwm0" with the output of the sysctl command if needed.
 
 [source,shell]
 ....
-# sysrc wlans_iwn0="wlan0"
+# sysrc wlans_iwm0="wlan0"
 # sysrc ifconfig_wlan0="WPA DHCP"
 ....
 
