website/ru: Update administration.adoc
    Update to the EN revision 777680e4ad63ee8a2dcc9a074414f2b4952feaeb
    Also capitalize teams names in several places.

--- a/website/content/ru/administration.adoc
+++ b/website/content/ru/administration.adoc
@@ -56,14 +56,13 @@ include::shared/authors.adoc[]
 Основная команда FreeBSD представляет собой «Совет директоров» проекта, отвечающий за определение общих целей и направления проекта, а также за управление конкретными областями проекта FreeBSD.
 Основная команда избирается активными разработчиками проекта.
 
-* {allanjude} (Представитель команды безопасности)
-* {dch} (Представитель команды инженерии выпусков)
-* {glebius} (Представитель команды багмастера и команды управления исходным кодом)
+* {allanjude} (Представитель Команды безопасности)
+* {dch} (Представитель Команды подготовки релизов)
+* {glebius} (Представитель Команды багмастера и Команды управления исходным кодом)
 * {hrs} (Представитель Фонда)
-* {lwhsu} (Представитель команды инженерии документации)
-* {mat} (Представитель команды администраторов кластера)
-* {olivier} (Представитель команды непрерывной интеграции)
-* {tcberner} (Представитель команды управления портами)
+* {lwhsu} (Представитель Команды управления документацией)
+* {mat} (Представитель Команды администраторов кластера и Команды управления портами)
+* {olivier} (Представитель Команды непрерывной интеграции)
 
 [[t-doceng]]
 == Команда управления документацией FreeBSD <doceng@FreeBSD.org>
@@ -365,5 +364,5 @@ admins mail aliases intentionally left incomplete
 //
 // The FreeBSD Russian Documentation Project
 //
-// Original EN revision (16.02.2026): a7b894c3ca9966ff7f8e11d249416643f554b4e3
+// Original EN revision (20.02.2026): 777680e4ad63ee8a2dcc9a074414f2b4952feaeb
 //
