Status/2025Q4/accessibility-handbook.adoc: Fix link
The characters -- in the URL do not behave as expected, hence encode
them as %2D%2D.

Reported by:	ykla <yklaxds@gmail.com>
Pull Request:	https://github.com/freebsd/freebsd-doc/pull/612

--- a/website/content/en/status/report-2025-10-2025-12/accessibility-handbook.adoc
+++ b/website/content/en/status/report-2025-10-2025-12/accessibility-handbook.adoc
@@ -11,7 +11,7 @@ The handbook aims to document the assistive technologies available in FreeBSD, c
 
 During this quarter:
 
-* The book was presented at the FreeBSD Developer Summit Zagreb 2025, with slides available link:https://docs.google.com/presentation/d/1rnw5fU8KyUCGNqR6gkM5IBdyx8cVVdqigCGmrrd--a4[here].
+* The book was presented at the FreeBSD Developer Summit Zagreb 2025, with slides available link:https://docs.google.com/presentation/d/1rnw5fU8KyUCGNqR6gkM5IBdyx8cVVdqigCGmrrd%2D%2Da4[here].
 * The book was published and is now available on the FreeBSD website under link:https://docs.freebsd.org/en/[Documentation] > link:https://docs.freebsd.org/en/books/[Books] > link:https://docs.freebsd.org/en/books/accessibility/[Accessibility Handbook].
 
 At present, the handbook describes assistive technologies related to visual disabilities.
