website/ru: Update releases/15.0R/hardware.adoc
Update to EN b82435c31412e84948e7c6abdbb1c31146dcf700

--- a/website/content/ru/releases/15.0R/hardware.adoc
+++ b/website/content/ru/releases/15.0R/hardware.adoc
@@ -12,6 +12,8 @@ sidenav: download
 :source-highlighter: rouge
 :experimental:
 
+include::shared/ru/urls.adoc[]
+
 = Информация об аппаратной совместимости FreeBSD {localRel}
 
 toc::[]
@@ -31,14 +33,14 @@ toc::[]
 [[proc-amd64]]
 === x86-64
 
-crossref:platforms[amd64,FreeBSD/amd64] поддерживает x86-64 как полностью поддерживаемую, crossref:committers-guide[archs,Уровень 1] архитектуру.
+link:/platforms/amd64[FreeBSD/amd64] поддерживает x86-64 как полностью сопровождаемую архитектуру link:{committers-guide}#archs[Уровня 1].
 Ожидается, что носители с выпуском будут работать на всех машинах x86-64 с как минимум 256 МБ ОЗУ.
 Этот выпуск включает оптимизации и улучшения для использования всех возможностей систем на основе FreeBSD/amd64, обеспечивая повышенную производительность для широкого спектра рабочих нагрузок.
 
 [[proc-arm-64]]
 === AArch64
 
-crossref:platforms[arm64,FreeBSD/aarch64] поддерживает 64-битный ARM (ARMv9 и ARMv8) как crossref:committers-guide[archs,Уровень 1] архитектуру.
+link:/platforms/arm[FreeBSD/aarch64] поддерживает 64-разрядные версии ARM (ARMv9 и ARMv8) как архитектуру link:{committers-guide}#archs[Уровня 1].
 
 В настоящее время поддерживаются следующие устройства:
 
@@ -73,6 +75,10 @@ AWS / Annapurna Labs:
 Cavium:
 
 * ThunderX
+
+Microsoft:
+
+* Windows Dev Kit 2023
 
 NXP Semiconductors:
 
@@ -112,7 +118,7 @@ Zedboard:
 [[proc-arm-32]]
 === AArch32
 
-crossref:platforms[armv7,FreeBSD/armv7] поддерживает 32-битный ARM (ARM-v7 и выше) как crossref:committers-guide[archs,Уровень 2] архитектуру.
+link:/platforms/arm[FreeBSD/armv7] поддерживает 32-разрядные версии ARM (ARM-v7 и выше) как архитектуру link:{committers-guide}#archs[Уровня 2].
 
 В настоящее время поддерживаются следующие устройства:
 
@@ -155,9 +161,9 @@ link:https://wiki.freebsd.org/arm/Raspberry%20Pi[Raspberry Pi]:
 [[proc-powerpc]]
 === POWER
 
-FreeBSD поддерживает 64-битный POWER как crossref:committers-guide[archs,Уровень 2] архитектуру.
+FreeBSD поддерживает 64-разрядный POWER как архитектуру link:{committers-guide}#archs[Уровня 2].
 
-crossref:platforms[powerpc,FreeBSD/powerpc64le] поддерживает 64-битный, двунаправленный POWER9 и POWER8, включая:
+link:/platforms/ppc[FreeBSD/powerpc64le] поддерживает 64-разрядные POWER9 и POWER8 с переключаемым порядком следования байтов, в том числе:
 
 IBM:
 
@@ -173,7 +179,7 @@ Raptor CS:
 * Talos II (POWER9)
 * Blackbird (POWER9)
 
-crossref:platforms[powerpc,FreeBSD/powerpc64] поддерживает 64-битный, обратный порядок байт POWER9 через POWER4, включая вышеперечисленные, а также:
+link:/platforms/ppc[FreeBSD/powerpc64] поддерживает 64-разрядные версии POWER9 с прямым следованием байтов, в том числе вышеперечисленные, через POWER4, а также следующие:
 
 A-EON:
 
@@ -191,7 +197,7 @@ IBM:
 [[proc-risc-v]]
 === RISC-V
 
-link:https://wiki.freebsd.org/riscv[FreeBSD/riscv64] поддерживает 64-битный RISC-V как crossref:committers-guide[archs,Уровень 2] архитектуру.
+link:https://wiki.freebsd.org/riscv[FreeBSD/riscv64] поддерживает 64-разрядный RISC-V как архитектуру link:{committers-guide}#archs[Уровня 2].
 
 Поддержка RISC-V представляет собой важную веху в эволюции этой операционной системы с открытым исходным кодом.
 FreeBSD была первой операционной системой, получившей загружаемую поддержку RISC-V в дереве исходного кода, что подчёркивает её приверженность поддержке новых аппаратных архитектур.
@@ -5062,5 +5068,5 @@ man:moused[8] содержит дополнительную информацию
 //
 // The FreeBSD Russian Documentation Project
 //
-// Original EN revision (23.12.2025): 004b8a3fae83762be2e55b54f1e82aebdbf4a7fe
+// Original EN revision (20.02.2026): b82435c31412e84948e7c6abdbb1c31146dcf700
 //
